tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__password_generator_test__password_generator_memorable_separator_focused.snap
---
source: tests/snapshot_tests/screens/password_generator_test.rs
expression: backend
---
" Password Generator                                                             "
"  Style [ Random ]  [ Memorable ]  [ PIN ]                                      "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  Word Count [ 4 ]  [-] ████░░░░░░░░░░░░░░░░ [+]                                "
"                                                                                "
"  [✓] Capitalize    Separator: [ _ ]                                            "
"──────────────────────────────────────────────────────────────────────────────  "
"  ┌──────────────────────────────────────────────────────────────────────────┐  "
"  │ Correct_Horse_Battery_Staple                                             │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                                                                "
"  Strength: ██████░░░░░░░░░░ Weak                                               "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  [ Regenerate(r) ]        [ Copy(c) ]                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑↓ Switch Focus  │  ←→ Adjust  │  r Regenerate  │  c Copy  │  +/- Generator  │ "
