tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__password_generator_test__password_generator_memorable_style.snap
---
source: tests/snapshot_tests/screens/password_generator_test.rs
expression: backend
---
" Password Generator                                                             "
"  Style [ Random ]  [ Memorable ]  [ PIN ]                                      "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  Word Count [ 3 ]  [-] ░░░░░░░░░░░░░░░░░░░░ [+]                                "
"                                                                                "
"  [✓] Capitalize    Separator: [ - ]                                            "
"──────────────────────────────────────────────────────────────────────────────  "
"  ┌──────────────────────────────────────────────────────────────────────────┐  "
"  │ Correct-Horse-Battery │                                                     "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                                                                "
"  Strength: ██████░░░░░░░░░░ Weak                                               "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  [ Regenerate(r) ]        [ Copy(c) ]                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑↓ Switch Focus  │  ←→ Adjust  │  r Regenerate  │  c Copy  │  +/- Generator  │ "
