tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__password_generator_test__password_generator_pin_style.snap
---
source: tests/snapshot_tests/screens/password_generator_test.rs
expression: backend
---
" Password Generator                                                             "
"  Style [ Random ]  [ Memorable ]  [ PIN ]                                      "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  Length [ 8 ]  [-] ███████░░░░░░░░░░░░░ [+]                                    "
"                                                                                "
"                                                                                "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  94820153                                                                      "
"  Strength: ███░░░░░░░░░░░░░ Too Weak                                           "
"                                                                                "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"      [ Regenerate ]          [ Copy ]                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ←→ Adjust  │  Tab Switch Focus  │  r Regenerate  │  Enter Copy  │  p Generator "
