tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__password_generator_test__password_generator_random_slider_focused.snap
---
source: tests/snapshot_tests/screens/password_generator_test.rs
expression: backend
---
" Password Generator                                                             "
"  Style [ Random ]  [ Memorable ]  [ PIN ]                                      "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  Length [ 20 ]  [-] █████████░░░░░░░░░░░ [+]                                   "
"                                                                                "
"  [✓] Uppercase  [✓] Lowercase  [✓] Digits  [✓] Symbols                         "
"──────────────────────────────────────────────────────────────────────────────  "
"  ┌──────────────────────────────────────────────────────────────────────────┐  "
"  │ aB3#cD4$eF5%gH6&iJ7*                                                     │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                                                                "
"  Strength: ████████████████ Excellent                                          "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  [ Regenerate(r) ]        [ Copy(c) ]                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑↓ Switch Focus  │  ←→ Adjust  │  r Regenerate  │  c Copy  │  +/- Generator  │ "
