tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__password_generator_test__password_generator_random_style_focused.snap
---
source: tests/snapshot_tests/screens/password_generator_test.rs
expression: backend
---
" Password Generator                                                             "
"  Style [ Random ]  [ Memorable ]  [ PIN ]                                      "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  Length [ 16 ]  [-] ██░░░░░░░░░░░░░░░░░░ [+]                                   "
"                                                                                "
"  [✓] Uppercase  [✓] Lowercase  [✓] Digits  [✓] Symbols                         "
"                                                                                "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  j8#K9mP2!qR5$tW1                                                              "
"  Strength: ████████████░░░░ Strong                                             "
"                                                                                "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"      [ Regenerate ]          [ Copy ]                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ←→ Adjust  │  Tab Switch Focus  │  r Regenerate  │  Enter Copy  │  p Generator "
