tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__password_generator_test__password_generator_random_toggle_focused.snap
---
source: tests/snapshot_tests/screens/password_generator_test.rs
expression: backend
---
" Password Generator                                                             "
"  Style [ Random ]  [ Memorable ]  [ PIN ]                                      "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  Length [ 16 ]  [-] ██░░░░░░░░░░░░░░░░░░ [+]                                   "
"                                                                                "
"  [ ] Uppercase  [✓] Lowercase  [✓] Digits  [✓] Symbols                         "
"                                                                                "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  k9m2q5t1v8x3z7w6                                                              "
"  Strength: ██████░░░░░░░░░░ Weak                                               "
"                                                                                "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"      [ Regenerate ]          [ Copy ]                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ←→ Adjust  │  Tab Switch Focus  │  r Regenerate  │  Enter Copy  │  p Generator "
