tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__password_generator_test__password_generator_with_hint.snap
---
source: tests/snapshot_tests/screens/password_generator_test.rs
expression: backend
---
" Password Generator                                Password copied to clipboard!"
"  Style [ Random ]  [ Memorable ]  [ PIN ]                                      "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  Length [ 16 ]  [-] ██████░░░░░░░░░░░░░░ [+]                                   "
"                                                                                "
"  [✓] Uppercase  [✓] Lowercase  [✓] Digits  [✓] Symbols                         "
"──────────────────────────────────────────────────────────────────────────────  "
"  ┌──────────────────────────────────────────────────────────────────────────┐  "
"  │ j8#K9mP2!qR5$tW1                                                         │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                                                                "
"  Strength: ████████████░░░░ Strong                                             "
"──────────────────────────────────────────────────────────────────────────────  "
"                                                                                "
"  [ Regenerate(r) ]        [ Copy(c) ]                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑↓ Switch Focus  │  ←→ Adjust  │  r Regenerate  │  c Copy  │  +/- Generator  │ "
